<resources>
    <string name="not_student">Not a Student</string>
    <string name="is_this_student_call">Is this a student call?</string>
    <string name="settings_title_text">Settings</string>
    <string name="app_name">CallLogger</string>
    <string name="is_this_a_student_call">Is this a student call?</string>
    <string name="student">Student</string>
    <string name="not_a_student">Not a Student</string>
    <string name="auto_mark_calls">Auto-mark calls</string>
    <string name="show_notifications">Show notifications</string>
    <string name="settings">Settings</string>
    <string name="call_history">Call History</string>
    <string name="call_log">Call Log</string>
    <string name="view_call_history">View Call History</string>
    <string name="Settings">Settings</string>
    <string name="preference_file_key" />
    <string name="preference_student_key" />
    <string name="enable_notifications">Enable Notifications</string>
    <string name="save">Save</string>
    <string name="click_me">Click me!</string>
    <string name="call_history_activity_label" />
</resources>