<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/settings"/>

    <Switch
        android:id="@+id/switch_auto_marking"
        android:layout_width="192dp"
        android:layout_height="73dp"
        android:text="@string/auto_mark_calls"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="192dp"
        android:layout_height="66dp"
        android:text="@string/show_notifications"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>
