<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/is_this_student_call"
        android:textSize="18sp"
        android:layout_above="@id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_above="@id/textView">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_me"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_not_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_student"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</RelativeLayout>
